--- a/index.html
+++ b/index.html
@@ -4,6 +4,131 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Tanvi Tonge | Portfolio</title>
+  <style>
+    /* style.css */
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    scroll-behavior: smooth;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  }
+  
+  body {
+    background-color: #f9f9f9;
+    color: #333;
+    line-height: 1.6;
+  }
+  
+  header {
+    background: #4b6cb7;
+    background: linear-gradient(to right, #182848, #4b6cb7);
+    color: #fff;
+    text-align: center;
+    padding: 2rem 1rem;
+  }
+  
+  header h1 {
+    font-size: 2.5rem;
+    margin-bottom: 0.5rem;
+  }
+  
+  header p {
+    font-size: 1.2rem;
+  }
+  
+  nav {
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    padding: 1rem;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  }
+  
+  nav a {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: #4b6cb7;
+    font-weight: bold;
+    transition: color 0.3s ease;
+  }
+  
+  nav a:hover {
+    color: #182848;
+  }
+  
+  section {
+    max-width: 1000px;
+    margin: 2rem auto;
+    padding: 0 1rem;
+  }
+  
+  h2 {
+    color: #182848;
+    margin-bottom: 1rem;
+    border-bottom: 2px solid #4b6cb7;
+    padding-bottom: 0.3rem;
+  }
+  
+  ul {
+    list-style-type: square;
+    margin-left: 1.5rem;
+  }
+  
+  .internship, .project {
+    margin-bottom: 1.5rem;
+    padding: 1rem;
+    background-color: #fff;
+    border-left: 4px solid #4b6cb7;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+  }
+  
+  .project h3, .internship h3 {
+    color: #4b6cb7;
+  }
+  
+  footer {
+    text-align: center;
+    padding: 1rem;
+    background-color: #182848;
+    color: #fff;
+    margin-top: 2rem;
+  }
+  
+  a {
+    color: #4b6cb7;
+  }
+  
+  a:hover {
+    text-decoration: underline;
+  }
+  
+  @media (max-width: 600px) {
+    header h1 {
+      font-size: 2rem;
+    }
+  
+    nav {
+      flex-direction: column;
+    }
+  
+    nav a {
+      margin: 0.5rem 0;
+    }
+  }
+  .profile-pic {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 4px solid #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    margin-bottom: 1rem;
+  }
+    
+  </style>
   <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
